<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="inSearchMode"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.assignment.jeeny.main.MainActivity">

        <TextView
            android:id="@+id/label_repository_library"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/repository_library"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/search_for_repository"
            android:inputType="text"
            android:imeOptions="actionSearch"
            app:layout_constraintTop_toBottomOf="@id/label_repository_library" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_save_repository"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{inSearchMode ? View.GONE : View.VISIBLE, default = visible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <TextView
                android:id="@+id/label_saved_repository"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/save_repositories"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_saved"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_saved_repository"
                tools:listitem="@layout/item_github_repo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_search_repository"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{inSearchMode ? View.VISIBLE : View.GONE, default = gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <TextView
                android:id="@+id/tv_result_count"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                tools:text="2 results"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_count"
                tools:listitem="@layout/item_github_repo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="@dimen/_1sdp"
            android:visibility="gone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>