<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repo"
            type="com.assignment.jeeny.model.GithubRepoModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.assignment.jeeny.detail.RepositoryDetailActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/ic_back"
            android:elevation="@dimen/_5sdp"
            android:padding="@dimen/_10sdp" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_repo_icon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="visible"
            app:actualImageScaleType="none"
            app:roundedCornerRadius="@dimen/_10sdp"
            binding:image_url="@{repo.owner.avatarUrl.toString()}" />

        <TextView
            android:id="@+id/repo_name"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@{repo.fullName}"
            app:layout_constraintStart_toEndOf="@id/repo_img"
            app:layout_constraintTop_toTopOf="@id/repo_img"
            tools:text="CI/CD" />

        <TextView
            android:id="@+id/repo_language"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@{repo.language}"
            tools:text="This is description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/grey_8D8D8D" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/forks" />

            <TextView
                android:id="@+id/repo_forks"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{repo.forks_Count.toString()}"
                tools:text="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/grey_8D8D8D" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/Issues" />

            <TextView
                android:id="@+id/repo_issues"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{repo.openIssuesCount.toString()}"
                tools:text="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/grey_8D8D8D" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/starred_by" />

            <TextView
                android:id="@+id/repo_starred_by"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{repo.stargazersCount.toString()}"
                tools:text="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/grey_8D8D8D" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/last_release_version" />

            <TextView
                android:id="@+id/repo_last_release_version"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{repo.lastReleaseVersion.toString()}"
                tools:text="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/grey_8D8D8D" />

    </LinearLayout>
</layout>
